kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/web-deployment.yaml
---
# Source: sentry/templates/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sentry-web
  labels:
    app: sentry
    chart: "sentry-2.0.0"
    release: "sentry"
    heritage: "Tiller"
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        metrics-enabled: "false"
        checksum/configYml: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/sentryConfPy: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app: sentry
        release: "sentry"
        role: web
    spec:
      containers:
      - name: sentry-web
        image: "sentry:9.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /etc/sentry
          name: config
          readOnly: true
        - mountPath: /var/lib/sentry/files
          name: sentry-data
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /_health/
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /_health/
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
            
      volumes:
      - name: config
        configMap:
          name: sentry
      - name: sentry-data
        persistentVolumeClaim:
          claimName: sentry
