kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/workers-deployment.yaml
---
# Source: sentry/templates/workers-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sentry-worker
  labels:
    app: sentry
    chart: "sentry-2.0.0"
    release: "sentry"
    heritage: "Tiller"
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        metrics-enabled: "false"
        checksum/configYml: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/sentryConfPy: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app: sentry
        release: "sentry"
        role: worker
    spec:
      containers:
      - name: sentry-workers
        image: "sentry:9.0"
        imagePullPolicy: IfNotPresent
        args:
          - "run"
          - "worker"
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /etc/sentry
          name: config
          readOnly: true
        - mountPath: /var/lib/sentry/files
          name: sentry-data
        resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
            
      volumes:
      - name: config
        configMap:
          name: sentry
      - name: sentry-data
        emptyDir: {}
